# IMPROVED Default english configuration