@@ -520,7 +520,7 @@ gui:
         lore:
           - '&7Here you can revoke'
           - '&7this invite.'
-        material: 'ROSE_RED'
+        material: 'RED_DYE'
         slot: 12
       back:
         name: '&cBack'
@@ -536,7 +536,7 @@ gui:
           - '&7Sender:&e {sender}'
           - '&7Receiver:&e {receiver}'
           - '&7Sent:&e {time}'
-        material: 'SIGN'
+        material: 'OAK_SIGN'
         slot: 16
     a:
       failure_noAccess:
@@ -551,7 +551,7 @@ gui:
           - '  &7objective.'
           - '&8- &7Contact the land owner'
           - '  &7for help.'
-        material: 'ROSE_RED'
+        material: 'RED_DYE'
     p:
       placeholder_1:
         material: 'GRAY_STAINED_GLASS_PANE'
@@ -691,7 +691,7 @@ gui:
           - '&8- &7Players can also'
           - '  &7be untrusted in'
           - '  &7certain chunks.'
-        material: 'ROSE_RED'
+        material: 'RED_DYE'
         slot: 12
       back:
         name: '&cBack'
@@ -709,7 +709,7 @@ gui:
           - ' '
           - '&7Lands:'
           - '&e{lands}'
-        material: 'SIGN'
+        material: 'OAK_SIGN'
         slot: 16
     a:
       untrust_noAccess:
@@ -725,7 +725,7 @@ gui:
           - '&8- &7Contact the land owner'
           - '  &7for help. He can allow'
           - '  &7you to do so.'
-        material: 'ROSE_RED'
+        material: 'RED_DYE'
     p:
       placeholder_1:
         material: 'GRAY_STAINED_GLASS_PANE'
@@ -932,7 +932,7 @@ gui:
           - ' '
           - '&7Allow this role to'
           - '&7trust other players?'
-        material: 'CACTUS_GREEN'
+        material: 'GREEN_DYE'
         from: 10
         to: 27
       player_setRole:
@@ -965,7 +965,7 @@ gui:
           - '&8- &7They won''t be able'
           - '  &7to untrust players which'
           - '  &7have an higher role.'
-        material: 'ROSE_RED'
+        material: 'RED_DYE'
         from: 10
         to: 27
       fly:
@@ -1356,7 +1356,7 @@ gui:
         lore:
           - '&7Click &aYes &7to confirm or'
           - '&cNo &7to abort this action.'
-        material: 'IRON_BARS'
+        material: 'OAK_SIGN'
         slot: 14
     l:
       yes_player:
@@ -1506,7 +1506,7 @@ gui:
           - ' '
           - '&7Sender:&e {sender}'
           - '&7Received:&e {time}'
-        material: 'SIGN'
+        material: 'OAK_SIGN'
         slot: 14
       info_chunk:
         name: '&bInformation'
@@ -1520,7 +1520,7 @@ gui:
           - ' '
           - '&7Sender:&e {sender}'
           - '&7Received:&e {time}'
-        material: 'SIGN'
+        material: 'OAK_SIGN'
         slot: 14
     l:
       accept:
@@ -1650,7 +1650,7 @@ gui:
         name: '&bLands &8(&7{amount}&8)'
         lore:
           - '{lands}'
-        material: 'SIGN'
+        material: 'OAK_SIGN'
         slot: 16
     p:
       placeholder_1:
