@@ -64,6 +64,10 @@ general:
     # NOTE: This is recommended, if you use
     # safezones for world spawns.
     keepSafezones: true
+    # Allow players to only fly in
+    # Lands claim worlds?
+    # Bypass permission: lands.bypass.wilderness.fly
+    fly-only-claimworld: true
     # Edit the land you're standing in
     # instead of the land from /Land edit
     # For /Lands claim you still need
@@ -1162,3 +1166,8 @@ integration:
       # The name of the layer
       # where users can see the marked lands.
       layer: 'Lands'
+      land:
+        opacity: 0.8
+      border:
+        opacity_2: 50.0
+        thickness: 4
