@@ -1,1 +1,5 @@
-# IMPROVED Default english configuration
+# FIXED Safezone title says always leaving
+# FIXED Safezone counts as top land
+# FIXED Dissallow fly spam message if shift in counter
+# FIXED Missing prefix in default language file in fly message
+# IMPROVED Made all default material vales to 1.14.x
